fixing collapsebar format

--- a/dsprojects/static/Sass/style.scss
+++ b/dsprojects/static/Sass/style.scss
@@ -228,6 +228,7 @@ button.btn.btn_bottombar {
 
 .collapsebuttonrow_bottombar_btn {
     width: 100%;
+    background: $green;
 }
 
 .bottombarrow {
